# RandomOdyssey

./: .gitignore  README.md  active_venv.ps1  magic_formula_selenium.py  pyproject.toml  pytest.ini  requirements.txt  runGenerateFeatures.py  runGenerateGroups.py  runGenerateModels.py  runModelAnalyze.py  runModelOptimize.py  runModelPrediction.py  runOutputsAnalyze.py  runSimulation.py  runUpdateDatabase.py  treetimeParams.py  updatePythonProject.ps1  updateRequirements.ps1
notebooks/: optuna_FilterSamples.ipynb  optuna_LGBMOnFiltered.ipynb  optuna_lstm.ipynb  sandbox.ipynb  sandbox_AlphaVantage.ipynb  sandbox_CNNModelTests.ipynb  sandbox_ConditionalML.ipynb  sandbox_FilterSamples.ipynb  sandbox_FilterSamples_optuna.ipynb  sandbox_FourierML.ipynb  sandbox_FourierML_2.ipynb  sandbox_NextDayML.ipynb  sandbox_RandomProjectionClassifier.ipynb  sandbox_SubsetML.ipynb  sandbox_TreeTimeML.ipynb  sandbox_chatsim.ipynb  sandbox_clustering_idea.ipynb  sandbox_database.ipynb  sandbox_featureFinData.ipynb  sandbox_featureFourier.ipynb  sandbox_featureGroupDynamic.ipynb  sandbox_featureMain.ipynb  sandbox_featureMathematical.ipynb  sandbox_featureSeasonal.ipynb  sandbox_featureTA.ipynb  sandbox_filteredmean.ipynb  sandbox_finData.ipynb  sandbox_fourierConst.ipynb  sandbox_lstm.ipynb  sandbox_lstm_max.ipynb  sandbox_lstm_optuna.ipynb  sandbox_lstm_transformer_optuna.ipynb  sandbox_matlab_minist.ipynb  sandbox_matlab_minist_WMatSol.ipynb  sandbox_matlab_minist_ellipke.ipynb  sandbox_seasonal.ipynb  sandbox_statistics.ipynb  sandbox_ta.ipynb  sandbox_treetimeparquet.ipynb  (+18 more)
(+125 files in other folders)
