[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.1.0"
description = "A short description of your project"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    # List your dependencies here, e.g., "numpy", "requests"
]

[tool.setuptools.packages.find]
where = ["src"]
