[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RandomOdyssey"
version = "0.1.0"
description = "A short description."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    {name = "KI", email = "KI@example.com"}
]
dependencies = [
    # TBD
]

[tool.setuptools.packages.find]
where = ["src"]
